--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socket-chat-example",
+  "name": "Jeopardy",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "Multiplayer Jeopardy ",
   "dependencies": {
     "edit-json-file": "^1.6.0",
     "express": "^4.17.1",
